--- a/pom.xml
+++ b/pom.xml
@@ -68,16 +68,16 @@
         Spring related dependencies
         Updated on 2024.10.24, all latest
         -->
-        <spring.boot.version>3.3.4</spring.boot.version>
-        <spring.cloud.version>2023.0.2</spring.cloud.version>
+        <spring.boot.version>3.4.0</spring.boot.version>
+        <spring.cloud.version>2023.0.4</spring.cloud.version>
 
         <!--
         gRpc related dependencies
         Updated on 2024.10.24, only protobuf.version cannot use the latest version
         Because the tool that generates stub code has stopped being maintained.
          -->
-        <grpc.version>1.68.0</grpc.version>
-        <protobuf.version>3.25.3</protobuf.version>
+        <grpc.version>1.68.2</grpc.version>
+        <protobuf.version>4.29.0</protobuf.version>
         <grpc.spring.boot.version>3.1.0.RELEASE</grpc.spring.boot.version>
 
         <!--
@@ -86,47 +86,47 @@
          an error will be reported during compilation.
          Updated on 2024.10.24, all latest
          -->
-        <tdengine.version>3.2.11</tdengine.version>
+        <tdengine.version>3.4.0</tdengine.version>
         <influxdb.version>7.2.0</influxdb.version>
-        <elasticsearch.version>8.15.3</elasticsearch.version>
-        <mybatis.plus.version>3.5.7</mybatis.plus.version>
+        <elasticsearch.version>8.16.1</elasticsearch.version>
+        <mybatis.plus.version>3.5.9</mybatis.plus.version>
 
         <!-- General tools -->
-        <jwt.version>0.12.5</jwt.version>
+        <jwt.version>0.12.6</jwt.version>
         <okhttp.version>4.12.0</okhttp.version>
-        <netty.version>4.1.110.Final</netty.version>
-        <commons.io.version>2.16.1</commons.io.version>
+        <netty.version>4.1.115.Final</netty.version>
+        <commons.io.version>2.18.0</commons.io.version>
         <jakarta.json.version>2.1.3</jakarta.json.version>
         <javax.annotation.version>1.3.2</javax.annotation.version>
         <jakarta.validation.version>3.1.0</jakarta.validation.version>
         <jakarta.annotation.version>3.0.0</jakarta.annotation.version>
         <hibernate.validator.version>8.0.1.Final</hibernate.validator.version>
-        <lombok.version>1.18.34</lombok.version>
-        <mapstruct.version>1.6.2</mapstruct.version>
+        <lombok.version>1.18.36</lombok.version>
+        <mapstruct.version>1.6.3</mapstruct.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
-        <hutool.version>5.8.32</hutool.version>
+        <hutool.version>5.8.34</hutool.version>
         <guava.version>33.3.1-jre</guava.version>
 
         <!-- Other dependencies -->
         <spring-oauth2.version>2.5.2.RELEASE</spring-oauth2.version>
-        <spring.cloud.nacos.version>2023.0.1.0</spring.cloud.nacos.version>
-        <nacos.client.version>2.3.2</nacos.client.version>
-        <micrometer.version>1.13.1</micrometer.version>
-        <velocity.version>2.3</velocity.version>
-        <apache.poi.version>5.2.5</apache.poi.version>
-        <apache.commons.version>1.26.2</apache.commons.version>
+        <spring.cloud.nacos.version>2023.0.3.2</spring.cloud.nacos.version>
+        <nacos.client.version>2.4.3</nacos.client.version>
+        <micrometer.version>1.14.1</micrometer.version>
+        <velocity.version>2.4.1</velocity.version>
+        <apache.poi.version>5.3.0</apache.poi.version>
+        <apache.commons.version>1.27.1</apache.commons.version>
         <activation.version>2.1.3</activation.version>
-        <xxl.job.version>2.4.1</xxl.job.version>
-        <jna.version>5.14.0</jna.version>
+        <xxl.job.version>2.4.2</xxl.job.version>
+        <jna.version>5.15.0</jna.version>
         <oshi.version>6.6.5</oshi.version>
-        <milo.version>0.6.13</milo.version>
+        <milo.version>0.6.14</milo.version>
         <paho.mqttv3.version>1.2.5</paho.mqttv3.version>
-        <bouncycastle.version>1.78.1</bouncycastle.version>
+        <bouncycastle.version>1.79</bouncycastle.version>
         <j.interop.version>3.0.0</j.interop.version>
-        <jackson.version>2.18.0</jackson.version>
+        <jackson.version>2.18.2</jackson.version>
         <jaxb.api.version>2.3.1</jaxb.api.version>
         <jaxb.version>4.0.5</jaxb.version>
-        <snakeyaml.version>2.2</snakeyaml.version>
+        <snakeyaml.version>2.3</snakeyaml.version>
 
         <!--
         OS Plugin related dependencies
@@ -139,14 +139,14 @@
         Updated on 2024.04.30, all latest
          -->
         <protobuf.plugin.version>0.6.1</protobuf.plugin.version>
-        <graalvm.native.version>0.10.2</graalvm.native.version>
-        <maven.gpg.plugin>3.2.4</maven.gpg.plugin>
+        <graalvm.native.version>0.10.3</graalvm.native.version>
+        <maven.gpg.plugin>3.2.7</maven.gpg.plugin>
         <maven.source.plugin>3.3.1</maven.source.plugin>
-        <maven.javadoc.plugin>3.7.0</maven.javadoc.plugin>
+        <maven.javadoc.plugin>3.11.1</maven.javadoc.plugin>
         <maven.compiler.plugin>3.13.0</maven.compiler.plugin>
         <maven.resource.plugin>3.3.1</maven.resource.plugin>
-        <maven.dependency.plugin>3.6.1</maven.dependency.plugin>
-        <maven.version.plugin>2.16.2</maven.version.plugin>
+        <maven.dependency.plugin>3.8.1</maven.dependency.plugin>
+        <maven.version.plugin>2.18.0</maven.version.plugin>
         <maven.nexus.plugin.version>1.7.0</maven.nexus.plugin.version>
     </properties>
 
@@ -371,6 +371,11 @@
             <dependency>
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-generator</artifactId>
+                <version>${mybatis.plus.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-jsqlparser</artifactId>
                 <version>${mybatis.plus.version}</version>
             </dependency>
             <dependency>
