--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <groupId>io.github.pnoker</groupId>
     <artifactId>dc3-parent</artifactId>
     <name>${project.artifactId}</name>
-    <version>2024.3.3</version>
+    <version>2024.3.4</version>
     <packaging>pom</packaging>
 
     <inceptionYear>2016-2024</inceptionYear>
@@ -112,7 +112,7 @@
         <spring.cloud.nacos.version>2023.0.3.2</spring.cloud.nacos.version>
         <nacos.client.version>2.4.3</nacos.client.version>
         <micrometer.version>1.14.1</micrometer.version>
-        <velocity.version>2.4.1</velocity.version>
+        <freemarker.version>2.3.33</freemarker.version>
         <apache.poi.version>5.3.0</apache.poi.version>
         <apache.commons.version>1.27.1</apache.commons.version>
         <activation.version>2.1.3</activation.version>
@@ -532,11 +532,11 @@
                 <version>${micrometer.version}</version>
             </dependency>
 
-            <!-- Apache Velocity -->
+            <!-- Freemarker -->
             <dependency>
-                <groupId>org.apache.velocity</groupId>
-                <artifactId>velocity-engine-core</artifactId>
-                <version>${velocity.version}</version>
+                <groupId>org.freemarker</groupId>
+                <artifactId>freemarker</artifactId>
+                <version>${freemarker.version}</version>
             </dependency>
 
             <!-- Apache Poi related dependencies -->
