--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -31,16 +31,36 @@ jobs:
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
-
+      
+      - name: Install jq
+        run: sudo apt-get install jq
+      
       - name: Decrypt GPG key
         run: |
           echo "${{ secrets.GPG_PRIVATE_KEY }}" | base64 --decode > private-key.asc
           gpg --batch --import private-key.asc
 
       - name: Build and deploy
+        run: mvn --settings .github/maven-settings.xml clean deploy -P deploy
         env:
           SERVER_ID: ${{ secrets.SERVER_ID }}
           SERVER_USERNAME: ${{ secrets.SERVER_USERNAME }}
           SERVER_PASSWORD: ${{ secrets.SERVER_PASSWORD }}
           GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
-        run: mvn --settings .github/maven-settings.xml clean deploy -P deploy
+        
+      - name: Close Staging Repository
+        run: |
+          STAGING_REPO_ID=$(curl -u ${{ secrets.SERVER_USERNAME }}:${{ secrets.SERVER_PASSWORD }} \
+            -X GET "https://s01.oss.sonatype.org/service/rest/v1/staging/repositories" \
+            | jq -r '.items[0].id')
+          echo "Staging repository ID: $STAGING_REPO_ID"
+          curl -u ${{ secrets.SERVER_USERNAME }}:${{ secrets.SERVER_PASSWORD }} \
+          -X POST "https://s01.oss.sonatype.org/service/rest/v1/staging/repositories/${STAGING_REPO_ID}/close"
+
+      - name: Drop Staging Repository (optional)
+        run: |
+          STAGING_REPO_ID=$(curl -u ${{ secrets.SERVER_USERNAME }}:${{ secrets.SERVER_PASSWORD }} \
+            -X GET "https://s01.oss.sonatype.org/service/rest/v1/staging/repositories" \
+            | jq -r '.items[0].id')
+          curl -u ${{ secrets.SERVER_USERNAME }}:${{ secrets.SERVER_PASSWORD }} \
+          -X POST "https://s01.oss.sonatype.org/service/rest/v1/staging/repositories/${STAGING_REPO_ID}/drop"
