--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -51,8 +51,9 @@ jobs:
       - name: Close Staging Repository
         run: |
           STAGING_REPO_ID=$(curl -u ${{ secrets.SERVER_USERNAME }}:${{ secrets.SERVER_PASSWORD }} \
-            -X GET "https://s01.oss.sonatype.org/service/rest/v1/staging/repositories" \
-            | jq -r '.items[0].id')
-          echo "Staging repository ID: $STAGING_REPO_ID"
+            -X GET \
+            -H "Accept:application/json" \
+            "https://s01.oss.sonatype.org/service/local/staging/profile_repositories" \
+            | jq -r ".data[0].profileId")
           curl -v -u ${{ secrets.SERVER_USERNAME }}:${{ secrets.SERVER_PASSWORD }} \
           -X POST "https://s01.oss.sonatype.org/service/rest/v1/staging/repositories/${STAGING_REPO_ID}/close"
