--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -52,8 +52,12 @@ jobs:
         run: |
           STAGING_REPO_ID=$(curl -u ${{ secrets.SERVER_USERNAME }}:${{ secrets.SERVER_PASSWORD }} \
             -X GET \
+            "${{ secrets.SERVER_URL }}/service/local/staging/profile_repositories" \
             -H "Accept:application/json" \
-            "https://s01.oss.sonatype.org/service/local/staging/profile_repositories" \
-            | jq -r ".data[0].profileId")
+            | jq -r ".data | sort_by(.updatedTimestamp) | .[-1].repositoryId")
+          
           curl -v -u ${{ secrets.SERVER_USERNAME }}:${{ secrets.SERVER_PASSWORD }} \
-          -X POST "https://s01.oss.sonatype.org/service/rest/v1/staging/repositories/${STAGING_REPO_ID}/close"
+            -X POST \
+            "${{ secrets.SERVER_URL }}/service/local/staging/bulk/close" \
+            -H "Content-Type:application/json" \
+            -d '{"data":{"description":"github action close","stagedRepositoryIds":["${STAGING_REPO_ID}"]}}'
