--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -48,22 +48,8 @@ jobs:
       - name: Install jq
         run: sudo apt-get install jq
 
-      - name: Close Staging Repository
-        run: |
-          STAGING_REPO_ID=$(curl -u ${{ secrets.SERVER_USERNAME }}:${{ secrets.SERVER_PASSWORD }} \
-            -X GET \
-            "${{ secrets.SERVER_URL }}/service/local/staging/profile_repositories" \
-            -H "Accept:application/json" \
-            | jq -r ".data | sort_by(.updatedTimestamp) | .[-1].repositoryId")
-          
-          curl -v -u ${{ secrets.SERVER_USERNAME }}:${{ secrets.SERVER_PASSWORD }} \
-            -X POST \
-            "${{ secrets.SERVER_URL }}/service/local/staging/bulk/close" \
-            -H "Content-Type:application/json" \
-            -d '{"data":{"description":"github action close","stagedRepositoryIds":["${STAGING_REPO_ID}"]}}'
-
-          curl -v -u ${{ secrets.SERVER_USERNAME }}:${{ secrets.SERVER_PASSWORD }} \
-            -X POST \
-            "https://s01.oss.sonatype.org/service/local/staging/bulk/promote" \
-            -H "Content-Type:application/json" \
-            -d '{"data":{"description":"github action release","autoDropAfterRelease":true,"stagedRepositoryIds":["${STAGING_REPO_ID}"]}}'
+      - name: Chmod release shell
+        run: chmod +x .github/release-to-nexus.sh
+      
+      - name: Run release shell
+        run: .github/release-to-nexus.sh
