--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,10 @@
     <groupId>io.github.pnoker</groupId>
     <artifactId>dc3-parent</artifactId>
     <name>${project.artifactId}</name>
-    <version>2025.6.0</version>
+    <version>2025.6.1</version>
     <packaging>pom</packaging>
 
-    <inceptionYear>2016-2024</inceptionYear>
+    <inceptionYear>2016-present</inceptionYear>
     <url>https://github.com/pnoker/iot-dc3</url>
     <description>
         IoT DC3 is a 100% open-source, distributed Internet of Things (IoT) platform built on Spring Cloud.
@@ -68,7 +68,7 @@
         Spring related dependencies
         Updated on 2025.04.24, all latest
         -->
-        <spring.boot.version>3.5.0</spring.boot.version>
+        <spring.boot.version>3.5.3</spring.boot.version>
         <spring.cloud.version>2025.0.0</spring.cloud.version>
 
         <!--
@@ -98,7 +98,7 @@
         <javax.annotation.version>1.3.2</javax.annotation.version>
         <jakarta.validation.version>3.1.1</jakarta.validation.version>
         <jakarta.annotation.version>3.0.0</jakarta.annotation.version>
-        <hibernate.validator.version>9.0.0.Final</hibernate.validator.version>
+        <hibernate.validator.version>9.0.1.Final</hibernate.validator.version>
         <lombok.version>1.18.38</lombok.version>
         <mapstruct.version>1.6.3</mapstruct.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
@@ -107,7 +107,7 @@
 
         <!-- Other dependencies -->
         <spring-oauth2.version>2.5.2.RELEASE</spring-oauth2.version>
-        <micrometer.version>1.15.0</micrometer.version>
+        <micrometer.version>1.15.1</micrometer.version>
         <freemarker.version>2.3.34</freemarker.version>
         <apache.poi.version>5.4.1</apache.poi.version>
         <apache.commons.version>1.27.1</apache.commons.version>
@@ -117,7 +117,7 @@
         <milo.version>0.6.16</milo.version>
         <paho.mqttv3.version>1.2.5</paho.mqttv3.version>
         <bouncycastle.version>1.81</bouncycastle.version>
-        <jackson.version>2.19.0</jackson.version>
+        <jackson.version>2.19.1</jackson.version>
         <jaxb.api.version>2.3.1</jaxb.api.version>
         <jaxb.version>4.0.5</jaxb.version>
         <snakeyaml.version>2.4</snakeyaml.version>
